Bug 392765 - Tooltips over window decoration buttons do not appear delayed
Summary: Tooltips over window decoration buttons do not appear delayed
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-05 15:59 UTC by Christoph Feck
Modified: 2018-04-22 20:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2018-04-05 15:59:12 UTC
Tooltips in Qt appear after hovering for a short time. For KWin decoration buttons, they appear instantly.

Some may find this distracting.
Comment 1 Martin Flöser 2018-04-05 16:17:53 UTC
That needs to be reassigned to a not yet existing kdecorations product
Comment 2 Алексей Шилин 2018-04-22 20:45:12 UTC
Git commit 5a14b6a6a2a95d9ddf20aed626854dae13553c12 by Алексей Шилин.
Committed on 22/04/2018 at 20:44.
Pushed by aleksejshilin into branch 'master'.

Improve tooltips behavior

Summary:
Window buttons tooltips used to appear on hover immediately. As
the result, they mostly appeared when not needed e.g. when user
was closing a window, or when the mouse pointer slightly touched
a button while being moved elsewhere.

This commit changes the tooltips behavior to WakeUp-FallAsleep
approach used by Widgets.
FIXED-IN: 5.13

Reviewers: #kwin, graesslin, broulik, #plasma

Reviewed By: #kwin, graesslin, #plasma

Subscribers: zzag, broulik, kwin, hein

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D12404

M  +16   -2    decorations/decoratedclient.cpp
M  +6    -0    decorations/decoratedclient.h

https://commits.kde.org/kwin/5a14b6a6a2a95d9ddf20aed626854dae13553c12